2007-10-04  Dan Williams  <dcbw@redhat.com>

	* src/applet-dbus-settings.h
	  src/applet-dbus-settings.c
		- (applet_dbus_connection_settings_save): new function; write a
			connection to GConf
		- (applet_dbus_settings_init): listen to GConf key changes for the
			entire connections directory, not each connection's own directory.
			Lets the applet get notifications when connections are removed or
			added.
		- (applet_dbus_settings_finalize): clean up GConf notifiers
		- (connections_changed_cb): handle connection additions, deletions,
			and changes
		- (applet_dbus_settings_get_by_gconf_path): new function
		- (applet_dbus_connection_settings_finalize): no longer clean up GConf
			stuff here
		- (applet_dbus_connection_settings_changed): renamed from
			connection_settings_changed_cb(), and validate the connection after
			re-reading it from GConf and return FALSE if the connection is no
			longer valid (and emit the Removed signal for the connection)
		- (applet_dbus_connection_settings_new): verify connection that was
			just read from GConf and return NULL if it's invalid
		- (applet_dbus_connection_settings_save): write an updated connection
			to GConf
		- (applet_dbus_connection_settings_new_from_connection): verify the
			connection that is passed in before using it

2007-10-03  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
	  src/menu-items.c
		- Fixups for Network -> AccessPoint changes in NM

2007-10-03  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
	  src/applet.h
		- (get_first_active_device): use active connection list now
		- (nma_menu_device_add_networks, nma_add_networks_helper): don't depend
			on only the active SSID, use the active connection to find out what
			AP should be marked in the menu
		- (clear_active_connections, foo_device_state_changed): update active
			connections when a device's state changes
		- (foo_client_state_change): clear active connections when NM goes away